add spreadsheets of results

--- a/scripts/create-embedding-data-by-set-test.ipynb
+++ b/scripts/create-embedding-data-by-set-test.ipynb
@@ -186,6 +186,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### DBLP-Scholar: reduced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-15T20:07:57.588938Z",
+     "start_time": "2018-04-15T20:07:36.520272Z"
+    },
+    "cell_style": "center"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Gensim model...\n",
+      "Check id column names are valid: passed\n",
+      "Check datasets have same column names: passed\n",
+      "Check listed columns are valid: passed\n",
+      "Columns to convert:\n",
+      "\ttitle\n",
+      "\tauthors\n",
+      "\tvenue\n",
+      "Cleaning text. Fixed 4128 unique tokens\n",
+      "Creating map file. 92475 unique tokens detected.\n",
+      "Building embedding matrix. 45412 unknown tokens assigned random Gaussian.\n",
+      "Converting text data to index vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python create-embedding-data-by-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/dblp-scholar ../data/converted/dblp-scholar-reduced -c title authors venue -s --max_df=1.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DBLP-Scholar: normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-15T20:11:23.928507Z",
+     "start_time": "2018-04-15T20:11:06.122565Z"
+    },
+    "cell_style": "center"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Gensim model...\n",
+      "Check id column names are valid: passed\n",
+      "Check datasets have same column names: passed\n",
+      "Check listed columns are valid: passed\n",
+      "Columns to convert:\n",
+      "\ttitle\n",
+      "\tauthors\n",
+      "\tvenue\n",
+      "Cleaning text. Fixed 4128 unique tokens\n",
+      "Creating map file. 123171 unique tokens detected.\n",
+      "Building embedding matrix. 37557 unknown tokens assigned random Gaussian.\n",
+      "Converting text data to index vectors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python create-embedding-data-by-set.py glove ../data/embeddings/glove-300.gensim ../data/raw/dblp-scholar ../data/converted/dblp-scholar -c title authors venue\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Script "
    ]
   },
