--- a/scripts/make-splits-test.ipynb
+++ b/scripts/make-splits-test.ipynb
@@ -140,6 +140,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### DBLP-scholar: normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-15T20:17:14.998876Z",
+     "start_time": "2018-04-15T20:15:22.029627Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5347 matched pairs detected. Creating 534700 non-matched pairs.\n",
+      "Training set contains 432038 instances\n",
+      "Validation set contains 54004 instances\n",
+      "Test set contains 54005 instances\n",
+      "Creating destination directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python make-splits.py ../data/converted/dblp-scholar/ ../data/split/dblp-scholar/ -npr 100 -v\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DBLP-scholar: reduced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-15T20:19:56.088359Z",
+     "start_time": "2018-04-15T20:17:39.219226Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5347 matched pairs detected. Creating 534700 non-matched pairs.\n",
+      "Training set contains 432038 instances\n",
+      "Validation set contains 54004 instances\n",
+      "Test set contains 54005 instances\n",
+      "Creating destination directory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! source activate entity-resolution && python make-splits.py ../data/converted/dblp-scholar-reduced/ ../data/split/dblp-scholar-reduced/ -npr 100 -v\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Script "
    ]
   },
